[package]
name = "slicers"
version = "0.1.0"
authors = ["Franck Rasolo <franckrasolo@users.noreply.github.com>"]
keywords = ["git"]
repository = "https://github.com/franckrasolo/slice.rs"
license = "Apache-2.0"
readme = "README.md"
description = """
pre-commit/pre-push Git hooks that encourage:
* committing fewer changes
* constructing a narrative through micro commits leaving a trail of breadcrumbs
* more frequent pushes of small change sets to the default branch: main | trunk
* more frequent integration
* working at a sustainable pace
"""
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[lib]
name = "slicers"

[dependencies]
anyhow = "1.0.89"
git2 = { version = "0.19.0", default-features = false, features = [] }
glob = "0.3.1"
clap = { version = "4.5.17", features = ["derive"] }

[dev-dependencies]
assertor = "0.0.3"
test-case = "3.3.1"
